  when compiling the run-time system and C stub code.
  "-std=gnu99 -O2 -fno-strict-aliasing -fwrapv" is used by default.
  This also affects default flags for user stubs compiled with "ocamlc -c foo.c"
  and may uncover bugs in them.
  (Xavier Leroy)

- GPR#262: Multiple GC roots per compilation unit
  (Pierre Chambart, Mark Shinwell, review by Damien Doligez)

- GPR#297: Several changes to improve the worst-case GC pause time.
  (Damien Doligez, with help from Leo White and Francois Bobot)

- GPR#325: Add v=0x400 flag to OCAMLRUNPARAM to display GC stats on exit
  (Louis Gesbert, review by Alain Frisch)

Standard library:

- PR#1460, GPR#230: Array.map2, Array.iter2
  (John Christopher McAlpine)

- PR#5197, GPR#63: Arg: allow flags such as --flag=arg as well as --flag arg
  (Richard Jones)

- PR#6017, PR#7034, GPR#267: More efficient ifprintf implementation
  (Jeremy Yallop, review by Gabriel Scherer)

- PR#6296: Some documentation on the floating-point representations
    recognized by Pervasives.float_of_string
  (Xavier Leroy)

- PR#6316: Scanf.scanf failure on %u formats when reading big integers
  (Xavier Leroy, Benoît Vaugon)

- PR#6321: guarantee that "hypot infinity nan = infinity"
  (for conformance with ISO C99)
  (Xavier Leroy)

- PR#6390, GPR#36: expose Sys.{int_size,max_wosize} for js_of_ocaml portability
  (Hugo Heuzard)

- PR#6449: Add Map.union
  (Alain Frisch)

* PR#6494: Add 'equal' functions in modules
  Bytes, Char, Digest, Int32, Int64, Nativeint, and String
  Users defining their own modules with signature 'module type of Int32'
  have to extend their implementation.
  (Romain Calascibetta)

* PR#6524, GPR#79: Filename: Optional ?perms argument to open_temp_file
  May break partial applications of the function (fix by passing ?perms:None)
  (Daniel Bünzli, review by Jacques-Pascal Deplaix)

* PR#6525, GPR#80: Add Uchar module to the standard library
  May introduce module name conflicts with existing projects.