@@ -63,12 +63,15 @@ CAMLexport value *caml_young_ptr = NULL, *caml_young_limit = NULL;
 CAMLexport value *caml_young_trigger = NULL;
 
 CAMLexport struct caml_ref_table
-  caml_ref_table = { NULL, NULL, NULL, NULL, NULL, 0, 0},
-  caml_finalize_table = { NULL, NULL, NULL, NULL, NULL, 0, 0};
-/* table of custom blocks containing finalizers in the minor heap */
+  caml_ref_table = { NULL, NULL, NULL, NULL, NULL, 0, 0};
 
 CAMLexport struct caml_ephe_ref_table
   caml_ephe_ref_table = { NULL, NULL, NULL, NULL, NULL, 0, 0};
+
+CAMLexport struct caml_custom_table
+  caml_custom_table = { NULL, NULL, NULL, NULL, NULL, 0, 0};
+/* Table of custom blocks in the minor heap that contain finalizers
+   or GC speed parameters. */
 
 int caml_in_minor_collection = 0;
 
@@ -100,6 +103,13 @@ void caml_alloc_ephe_table (struct caml_ephe_ref_table *tbl, asize_t sz,
 {
   alloc_generic_table ((struct generic_table *) tbl, sz, rsv,
                        sizeof (struct caml_ephe_ref_elt));
+}
+
+void caml_alloc_custom_table (struct caml_custom_table *tbl, asize_t sz,
+                              asize_t rsv)
+{
+  alloc_generic_table ((struct generic_table *) tbl, sz, rsv,
+                       sizeof (struct caml_custom_elt));
 }
 
 static void reset_table (struct generic_table *tbl)
@@ -319,6 +329,7 @@ void caml_oldify_mopup (void)
 void caml_empty_minor_heap (void)
 {
   value **r;
+  struct caml_custom_elt *elt;
   uintnat prev_alloc_words;
   struct caml_ephe_ref_elt *re;
 
@@ -354,11 +365,15 @@ void caml_empty_minor_heap (void)
       }
     }
     /* Run custom block finalisation of dead minor values */
-    for (r = caml_finalize_table.base; r < caml_finalize_table.ptr; r++){
-      int hd = Hd_val ((value)*r);
-      if (hd != 0){         /* If not oldified the finalizer must be called */
-        void (*final_fun)(value) = Custom_ops_val((value)*r)->finalize;
-        final_fun((value)*r);
+    for (elt = caml_custom_table.base; elt < caml_custom_table.ptr; elt++){
+      value v = elt->block;
+      if (Hd_val (v) == 0){
+        /* Block was copied to the major heap: adjust GC speed numbers. */
+        caml_adjust_gc_speed(elt->mem, elt->max);
+      }else{
+        /* Block will be freed: call finalization function, if any. */
+        void (*final_fun)(value) = Custom_ops_val(v)->finalize;
+        if (final_fun != NULL) final_fun(v);
       }
     }
     CAML_INSTR_TIME (tmr, "minor/update_weak");
@@ -368,7 +383,7 @@ void caml_empty_minor_heap (void)
     caml_young_ptr = caml_young_alloc_end;
     clear_table ((struct generic_table *) &caml_ref_table);
     clear_table ((struct generic_table *) &caml_ephe_ref_table);
-    clear_table ((struct generic_table *) &caml_finalize_table);
+    clear_table ((struct generic_table *) &caml_custom_table);
     caml_gc_message (0x02, ">", 0);
     caml_in_minor_collection = 0;
     caml_final_empty_young ();
@@ -516,4 +531,14 @@ void caml_realloc_ephe_ref_table (struct caml_ephe_ref_table *tbl)
      "ephe_ref_table threshold crossed\n",
      "Growing ephe_ref_table to %" ARCH_INTNAT_PRINTF_FORMAT "dk bytes\n",
      "Fatal error: ephe_ref_table overflow\n");
+}
+
+void caml_realloc_custom_table (struct caml_custom_table *tbl)
+{
+  realloc_generic_table
+    ((struct generic_table *) tbl, sizeof (struct caml_custom_elt),
+     "request_minor/realloc_custom_table@",
+     "custom_table threshold crossed\n",
+     "Growing custom_table to %" ARCH_INTNAT_PRINTF_FORMAT "dk bytes\n",
+     "Fatal error: custom_table overflow\n");
 }
